--- a/index.html
+++ b/index.html
@@ -182,6 +182,44 @@
                 padding: 15px;
             }
         }
+
+        .post-images {
+            margin: 15px 0;
+        }
+
+        .show-images-btn {
+            background: #0066cc;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 0.9em;
+            transition: background-color 0.2s ease;
+        }
+
+        .show-images-btn:hover {
+            background: #0052a3;
+        }
+
+        .images-container {
+            display: none;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .images-container img {
+            width: 100%;
+            border-radius: 12px;
+            object-fit: cover;
+            aspect-ratio: 16/9;
+            transition: transform 0.2s ease;
+        }
+
+        .images-container img:hover {
+            transform: scale(1.02);
+        }
     </style>
 </head>
 <body>
