Improve some things with timestamps and profile loading

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 15px;
+            position: relative;
         }
 
         .avatar {
@@ -219,6 +220,13 @@
 
         .images-container img:hover {
             transform: scale(1.02);
+        }
+
+        .timestamp {
+            color: #536471;
+            font-size: 0.9em;
+            margin-left: auto;
+            padding-left: 15px;
         }
     </style>
 </head>
