--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             border-radius: 20px;
             margin: 10px 0;
             font-size: 0.95em;
+            white-space: nowrap;
         }
 
         .post-content {
