--- a/index.html
+++ b/index.html
@@ -79,6 +79,25 @@
 
         .profile-details {
             flex-grow: 1;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
+        .name-handle {
+            flex-grow: 1;
+        }
+
+        .compact-stats {
+            color: #536471;
+            font-size: 0.85em;
+            text-align: right;
+            margin-right: 15px;
+        }
+
+        .compact-stats span {
+            display: block;
+            line-height: 1.4;
         }
 
         .display-name {
@@ -128,27 +147,10 @@
             font-weight: 500;
         }
 
-        .profile-stats {
-            display: flex;
-            gap: 20px;
-            color: #536471;
-            font-size: 0.95em;
-            margin: 15px 0;
-            padding: 15px 0;
-            border-top: 1px solid #ebeef0;
-            border-bottom: 1px solid #ebeef0;
-        }
-
-        .profile-stats span {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-        }
-
         .post-links {
             display: flex;
             gap: 15px;
-            margin-top: 15px;
+            margin-top: 0;
         }
 
         .post-links a {
@@ -219,8 +221,17 @@
         .timestamp {
             color: #536471;
             font-size: 0.9em;
-            margin-left: auto;
-            padding-left: 15px;
+            white-space: nowrap;
+            margin-left: 15px;
+        }
+
+        .post-meta {
+            border-top: 1px solid #ebeef0;
+            margin-top: 15px;
+            padding-top: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
     </style>
 </head>
