--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
             justify-content: space-between;
             align-items: center;
         }
+
+        .likes.on-fire {
+            background: linear-gradient(135deg, #ff6b6b, #ffd93d);
+            color: white;
+            animation: pulse 2s infinite;
+            box-shadow: 0 2px 8px rgba(255, 107, 107, 0.3);
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 <body>
