Bruteforce max-width to fix width issue

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         }
 
         .post-item {
+            max-width: 700px;
             background: #ffffff;
             border-radius: 16px;
             padding: 20px;
