Adjust fire gradient

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         }
 
         .likes.on-fire {
-            background: linear-gradient(135deg, #ff6b6b, #ffd93d);
+            background: linear-gradient(135deg, #ffd93d, 40%, #ff6b6b);
             color: white;
             animation: pulse 2s infinite;
             box-shadow: 0 2px 8px rgba(255, 107, 107, 0.3);
