--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@
             justify-content: space-between;
             align-items: flex-start;
             color: #536471;
-            font-size: 1.1em;
         }
 
         .counters {
@@ -295,6 +294,8 @@
             flex-direction: column;
             align-items: flex-end;
             gap: 5px;
+            color: #536471;
+            font-size: 0.85em;
         }
 
         .status-left {
