--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover trending posts from the Bluesky social network in real-time">
+    <meta name="keywords" content="Bluesky, social media, trending posts, AT Protocol">
+    
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-domain.com/">
+    <meta property="og:title" content="Bluesky Trending Posts">
+    <meta property="og:description" content="Discover trending posts from the Bluesky social network in real-time">
+    <meta property="og:image" content="https://your-domain.com/images/og-image.png">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    
     <title>Bluesky Top Posts</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
