Move Like indicator to bottom

--- a/index.html
+++ b/index.html
@@ -389,6 +389,16 @@
                 transform: translateX(400px) skewX(-45deg);
             }
         }
+
+        .meta-left {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .likes {
+            margin: 0;
+        }
     </style>
 </head>
 <body>
