--- a/index.html
+++ b/index.html
@@ -399,6 +399,43 @@
         .likes {
             margin: 0;
         }
+
+        .show-json-btn {
+            background: none;
+            color: #536471;
+            border: none;
+            padding: 4px 8px;
+            cursor: pointer;
+            font-size: 1em;
+            transition: all 0.2s ease;
+            opacity: 0.6;
+        }
+
+        .show-json-btn:hover {
+            opacity: 1;
+            background: none;
+        }
+
+        .show-json-btn.active {
+            opacity: 1;
+            background: none;
+        }
+
+        .json-container {
+            margin-top: 15px;
+            padding: 15px;
+            background: #1a202c;
+            border-radius: 8px;
+            overflow-x: auto;
+        }
+
+        .json-container pre {
+            color: #a0aec0;
+            font-family: monospace;
+            font-size: 0.9em;
+            line-height: 1.4;
+            white-space: pre-wrap;
+        }
     </style>
 </head>
 <body>
