Only update the number in the total likes and posts counters

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             padding: 20px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
             border: 1px solid rgba(0, 0, 0, 0.05);
+            overflow: hidden;
         }
 
         .profile-info {
@@ -460,8 +461,8 @@
                     </div>
                 </div>
                 <div class="counters">
-                    <span id="post-counter"><span class="counter-number">0</span> 📝</span>
-                    <span id="likes-counter"><span class="counter-number">0</span> ❤️</span>
+                    <span><span id="post-counter" class="counter-number">0</span> 📝</span>
+                    <span><span id="likes-counter" class="counter-number">0</span> ❤️</span>
                 </div>
             </div>
         </div>
