--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             line-height: 1.6;
             margin: 15px 0;
             color: #0f1419;
+            position: relative;
         }
 
         .post-content a {
@@ -261,7 +262,9 @@
         }
 
         .tools-group {
-            flex-shrink: 0;
+            position: absolute;
+            bottom: 0;
+            right: 0;
         }
 
         .stats-group {
