--- a/index.html
+++ b/index.html
@@ -450,6 +450,88 @@
             font-family: 'Courier New', monospace;
             font-size: 1.1em;
         }
+
+        .post-embed {
+            margin: 15px 0;
+        }
+
+        .show-embed-btn {
+            background: #0066cc;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 0.9em;
+            transition: background-color 0.2s ease;
+        }
+
+        .show-embed-btn:hover {
+            background: #0052a3;
+        }
+
+        .embed-container {
+            margin-top: 10px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            overflow: hidden;
+        }
+
+        .embed-link {
+            display: flex;
+            text-decoration: none;
+            color: inherit;
+            background: #ffffff;
+            transition: background-color 0.2s ease;
+        }
+
+        .embed-link:hover {
+            background: #f5f8fa;
+        }
+
+        .embed-link img {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+        }
+
+        .embed-content {
+            padding: 15px;
+            flex: 1;
+        }
+
+        .embed-title {
+            font-size: 1.1em;
+            font-weight: 600;
+            margin-bottom: 8px;
+            color: #1c2024;
+        }
+
+        .embed-description {
+            font-size: 0.95em;
+            color: #536471;
+            margin-bottom: 8px;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+
+        .embed-url {
+            font-size: 0.9em;
+            color: #536471;
+        }
+
+        @media (max-width: 600px) {
+            .embed-link {
+                flex-direction: column;
+            }
+            
+            .embed-link img {
+                width: 100%;
+                height: 200px;
+            }
+        }
     </style>
 </head>
 <body>
