Add support for quoted posts

--- a/index.html
+++ b/index.html
@@ -532,6 +532,22 @@
                 height: 200px;
             }
         }
+
+        .quoted-post-link {
+            display: inline-block;
+            color: #0066cc;
+            text-decoration: none;
+            font-size: 0.95em;
+            padding: 8px 16px;
+            border-radius: 20px;
+            background: rgba(0, 102, 204, 0.1);
+            transition: background 0.2s ease;
+        }
+
+        .quoted-post-link:hover {
+            background: rgba(0, 102, 204, 0.15);
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
