--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     
-    <title>Bluesky Top Posts</title>
+    <title>Bluesky Trending Posts</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
