--- a/index.html
+++ b/index.html
@@ -548,6 +548,41 @@
             background: rgba(0, 102, 204, 0.15);
             text-decoration: none;
         }
+
+        .video-embed {
+            margin: 15px 0;
+        }
+
+        .video-indicator {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 12px 16px;
+            background: rgba(0, 102, 204, 0.1);
+            border-radius: 12px;
+            color: #1c2024;
+            font-size: 0.95em;
+        }
+
+        .video-icon {
+            font-size: 1.2em;
+        }
+
+        .view-video-link {
+            margin-left: auto;
+            color: #0066cc;
+            text-decoration: none;
+            font-size: 0.95em;
+            padding: 6px 12px;
+            border-radius: 16px;
+            background: rgba(0, 102, 204, 0.1);
+            transition: background 0.2s ease;
+        }
+
+        .view-video-link:hover {
+            background: rgba(0, 102, 204, 0.15);
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
