--- a/index.html
+++ b/index.html
@@ -261,18 +261,12 @@
             flex-grow: 1;
         }
 
-        .tools-group {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-        }
-
         .stats-group {
             flex-shrink: 0;
             margin-left: auto;
             display: flex;
             align-items: center;
-            gap: 15px;
+            gap: 12px;
         }
 
         .likes.on-fire {
@@ -412,6 +406,7 @@
             font-size: 1em;
             transition: all 0.2s ease;
             opacity: 0.6;
+            margin: 0;
         }
 
         .show-json-btn:hover {
@@ -582,6 +577,20 @@
         .view-video-link:hover {
             background: rgba(0, 102, 204, 0.15);
             text-decoration: none;
+        }
+
+        .view-link {
+            color: #0066cc;
+            text-decoration: none;
+            font-size: 0.95em;
+            padding: 4px 12px;
+            border-radius: 20px;
+            background: rgba(0, 102, 204, 0.1);
+            transition: background 0.2s ease;
+        }
+
+        .view-link:hover {
+            background: rgba(0, 102, 204, 0.15);
         }
     </style>
 </head>
