--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="keywords" content="Bluesky, social media, trending posts, AT Protocol">
     
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com/">
+    <meta property="og:url" content="https://lantto.github.io/bluesky-trending/">
     <meta property="og:title" content="Bluesky Trending Posts">
     <meta property="og:description" content="Discover trending posts from the Bluesky social network in real-time">
-    <meta property="og:image" content="https://your-domain.com/images/og-image.png">
+    <meta property="og:image" content="https://lantto.github.io/bluesky-trending/og.png">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     
